--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Primer ejercicio Js</title>
-        <script defer src="app.js"></script>
+        <title>Segundo ejercicio Js</title>
     </head>
     <body>
-        <h1>Bienvenidos a mi primer práctica de Js!!</h1>
+        <h1>Bienvenidos al segundo ejercicio de Js!!</h1>
 
         <h4>Por favor, completa los datos que te pedirán los carteles</h4>
         <h4>Trata de no dejar ninguno en blanco</h4>
-        <h4>Elige de qué forma quieres visualizar los resultados</h4>
+        <h4>Elige la operación que quieras hacer</h4>
         <br />
         <h4>Si tienes cualquier problema, intenta recargar la página</h4>
         <h4>Muchas gracias!!</h4>
+
+        <script src="app.js"></script>
     </body>
 </html>
