D2 -- Desafíos de la segunda clase listos para entregar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h4>Por favor, completa los datos que te pedirán los carteles</h4>
         <h4>Trata de no dejar ninguno en blanco</h4>
         <h4>Elige la operación que quieras hacer</h4>
+        <h4>Los resultados sólo se verán por consola</h4>
         <br />
         <h4>Si tienes cualquier problema, intenta recargar la página</h4>
         <h4>Muchas gracias!!</h4>
