D3 -- Inicio practica de desafíos de la 3er clase - objetos

--- a/index_desafio_2.html
+++ b/index_desafio_2.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Objetos y arrays en Js</title>
+        <title>Segundo ejercicio Js</title>
     </head>
     <body>
-        <h1>Bienvenidos al tercer ejercicio de Js!!</h1>
+        <h1>Bienvenidos al segundo ejercicio de Js!!</h1>
 
         <h4>Por favor, completa los datos que te pedirán los carteles</h4>
         <h4>Trata de no dejar ninguno en blanco</h4>
-        <h4>Recuerda que todo será necesario para ordenar tu blog</h4>
+        <h4>Elige la operación que quieras hacer</h4>
         <h4>Los resultados sólo se verán por consola</h4>
         <br />
         <h4>Si tienes cualquier problema, intenta recargar la página</h4>
