D3 -- Entrega de desafíos sobre objetos y arrays (clase 9/10)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>Bienvenidos al tercer ejercicio de Js!!</h1>
+        <h2>Objetos y Arrays</h2>
 
         <h4>Por favor, completa los datos que te pedirán los carteles</h4>
         <h4>Trata de no dejar ninguno en blanco</h4>
